demandaCovid19/objects/People_Tracing__c.object
<CustomObject>
    <label>People Tracing</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>People Tracing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Contact_Date__c</fullName>
        <label>Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cohabitant</fullName>
                </value>
                <value>
                    <fullName>Neighbour</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person_1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Person 1</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Primary Close Contacts</relationshipLabel>
        <relationshipName>Close_Contacts1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Person 2</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Secondary Close Contacts</relationshipLabel>
        <relationshipName>Close_Contacts2</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>